Update links to point to GitHub Pages

--- a/index.html
+++ b/index.html
@@ -85,8 +85,8 @@
 <body>
     <h1>Welcome to Usairim Web Tech Games</h1>
     <p>Choose your adventure:</p>
-    <a href="games.html" class="button">Games</a>
-    <a href="agents.html" class="button">Agents</a>
+    <a href="usairimkamal786.github.io/Games" class="button">Games</a>
+    <a href="usairimkamal786.github.io/Agents" class="button">Agents</a>
 
     <footer>© Usairim Kamal. All rights reserved.</footer>
 </body>
