--- a/index.html
+++ b/index.html
@@ -2,18 +2,47 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <title>Usairim Web Tech</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/png" href="favicon.png">
-    <title>Usairim Web Tech Games</title>
+
+    <!-- Simple modern styling -->
     <style>
-        /* General body style */
         body {
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
             margin: 0;
-            padding: 0;
+            font-family: 'Segoe UI', Arial, sans-serif;
+            background: linear-gradient(135deg, #0f2027, #203a43, #2c5364);
+            color: white;
             height: 100vh;
-            background: linear-gradient(135deg, #0f0c29, #302b63, #24243e);
-            color: #fff;
+        }
+
+        /* Top-left corner buttons */
+        .top-left {
+            position: fixed;
+            top: 15px;
+            left: 15px;
+            display: flex;
+            gap: 10px;
+        }
+
+        .top-left a {
+            text-decoration: none;
+            padding: 10px 16px;
+            background: rgba(255, 255, 255, 0.15);
+            border: 1px solid rgba(255, 255, 255, 0.3);
+            border-radius: 8px;
+            color: white;
+            font-weight: 600;
+            transition: all 0.3s ease;
+        }
+
+        .top-left a:hover {
+            background: white;
+            color: #203a43;
+        }
+
+        /* Center content */
+        .center {
+            height: 100%;
             display: flex;
             flex-direction: column;
             justify-content: center;
@@ -23,77 +52,50 @@
 
         h1 {
             font-size: 3rem;
-            color: #00ffea;
-            text-shadow: 2px 2px 8px #00ffea, 0 0 20px #00ffea;
-            margin-bottom: 20px;
+            margin-bottom: 10px;
         }
 
         p {
-            font-size: 1.5rem;
-            margin-bottom: 50px;
-            color: #ffffffaa;
+            font-size: 1.2rem;
+            opacity: 0.9;
+            max-width: 500px;
         }
 
-        /* Stylish neon buttons */
-        .button {
-            display: inline-block;
-            margin: 15px;
-            padding: 20px 50px;
-            font-size: 1.5rem;
-            text-decoration: none;
-            color: #00ffea;
-            border: 2px solid #00ffea;
-            border-radius: 15px;
-            transition: 0.4s;
-            position: relative;
-            overflow: hidden;
-            text-transform: uppercase;
-            letter-spacing: 1px;
-        }
-
-        .button::before {
-            content: '';
-            position: absolute;
-            top: 0;
-            left: -100%;
-            width: 100%;
-            height: 100%;
-            background: rgba(0, 255, 234, 0.2);
-            transition: 0.4s;
-            transform: skewX(-20deg);
-        }
-
-        .button:hover::before {
-            left: 200%;
-        }
-
-        .button:hover {
-            background-color: #00ffea10;
-            color: #fff;
-            box-shadow: 0 0 20px #00ffea, 0 0 40px #00ffea;
-            border-color: #00ffea;
-        }
-
-        /* Footer style */
         footer {
-            position: absolute;
-            bottom: 20px;
+            position: fixed;
+            bottom: 10px;
+            width: 100%;
+            text-align: center;
             font-size: 0.9rem;
-            color: #ffffff66;
+            opacity: 0.7;
         }
     </style>
 </head>
 <body>
-    <h1>Welcome to Usairim Web Tech Games</h1>
-    <p>Choose your adventure:</p>
-    <a href="https://usairimkamal786.github.io/Games" class="button">Games</a>
-    <a href="https://usairimkamal786.github.io/Agents" class="button">Agents</a>
 
-    <footer>© <span id="year"></span> Usairim Kamal. All rights reserved.</footer>
+    <!-- Top-left navigation -->
+    <div class="top-left">
+        <a href="https://usairimkamal786.github.io/Games" target="_blank">🎮 Games</a>
+        <a href="https://usairimkamal.github.io/Agents" target="_blank">🤖 Agents</a>
+    </div>
+
+    <!-- Main content -->
+    <div class="center">
+        <h1>Usairim Web Tech</h1>
+        <p>
+            Building clean web tools, smart agents, and fun games.  
+            Old fundamentals. New energy. Code that actually works.
+        </p>
+    </div>
+
+    <!-- Footer -->
+    <footer>
+        © <span id="year"></span> Usairim Web Tech. All rights reserved.
+    </footer>
 
     <script>
-        // This will automatically update the year in the footer
-        document.getElementById('year').textContent = new Date().getFullYear();
+        document.getElementById("year").textContent = new Date().getFullYear();
     </script>
+
 </body>
 </html>
