--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Usairim Web Tech</title>
+    <link rel="icon" type="image/png" href="favicon.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- Simple modern styling -->
@@ -76,7 +77,7 @@
     <!-- Top-left navigation -->
     <div class="top-left">
         <a href="https://usairimkamal786.github.io/Games" target="_blank">🎮 Games</a>
-        <a href="https://usairimkamal.github.io/Agents" target="_blank">🤖 Agents</a>
+        <a href="https://usairimkamal786.github.io/Agents" target="_blank">🤖 Agents</a>
     </div>
 
     <!-- Main content -->
